<resources>

    <string name="wm_conversation_title">聊天</string>
    <string name="wm_conversation_title_connecting">聊天(连接中...)</string>
    <string name="wm_conversatin_title_offline">聊天(离线)</string>
    <string name="wm_confirm">确定</string>
    <string name="wm_back">返回</string>
    <string name="wm_auth_failed">认证失败</string>
    <string name="wm_system_busy">系统繁忙</string>
    <string name="wm_group_msg_center">群组消息</string>
    <string name="wm_comment_msg">我的消息</string>
    <string name="wm_fri_recommend_msg">新的朋友</string>
    <string name="wm_gro_recommend_msg">群组推荐消息</string>
    <string name="wm_nearby_users_option_greeting_users">打招呼的人</string>
    <string name="wm_unknow">未知</string>
    <string name="wm_shield_groups">屏蔽群组</string>
    <string name="wm_already_add1">已添加</string>
    <string name="wm_add1">添加</string>
    <string name="wm_copy">复制</string>
    <string name="wm_delete">删除</string>
    <string name="wm_reupdate">重发</string>
    <string name="wm_transpond">转发</string>
    <string name="wm_secret_msg_sound">声音密语</string>
    <string name="wm_whisper_expression">表情密语</string>
    <string name="wm_secret_msg_pic">图片密语</string>
    <string name="wm_already_agree">已同意</string>
    <string name="wm_agree">同意</string>
    <string name="wm_msg_image">发了一张图片</string>
    <string name="wm_msg_audio">语音消息</string>
    <string name="wm_msg_pos">分享了一个位置</string>
    <string name="wm_msg_card_suffix">的名片</string>
    <string name="wm_msg_gcard_suffix">小组的名片</string>
    <string name="wm_msg_whisper">发了一条图片密语</string>
    <string name="wm_msg_whisper_expression">发了一张表情密语</string>
    <string name="wm_msg_whisper_voice">发了一条语音密语</string>
    <string name="wm_msg_paster">动态表情</string>
    <string name="wm_c_share_activity">分享了一条活动</string>
    <string name="wm_c_share_feed">分享了一条动态</string>
    <string name="wm_c_share_link">分享了一条链接</string>
    <string name="wm_msg_dynamic">发布了一条动态</string>
    <string name="wm_msg_activity">发布了一条活动</string>
    <string name="wm_msg_bulletin">发布了一条新公告</string>
    <string name="wm_expression_cos">小幺鸡表情</string>
    <string name="wm_expression_paster">胶泥表情</string>
    <string name="wm_expression_cat">猫咪表情</string>
    <string name="wm_expression_yoyo">YOYO表情</string>
    <string name="wm_expression_uncle_mao">二毛叔表情</string>
    <string name="wm_expression_ikkyu">一休表情</string>
    <string name="wm_expression_errenzhuan">二人转表情</string>
    <string name="wm_expression_yaoji_wm">小幺鸡生肖表情</string>
    <string name="wm_expression_qunzu">群组表情</string>
    <string name="wm_already_join">已加入</string>
    <string name="wm_join">加入</string>
    <string name="wm_chat_from_me">我</string>
    <string name="wm_msg_comment">[评论]</string>
    <string name="wm_invite_all">一键召集</string>
    <string name="wm_look_detail">查看详情</string>
    <string name="wm_you_have">你有</string>
    <string name="wm__new_msg">条消息</string>
    <string name="wm__contact_">个联系人发来</string>
    <string name="wm__group_">个群组发来</string>
    <string name="wm_temp_group">临时群聊</string>
    <string name="wm_yesterday">昨天</string>
    <string name="wm_group_msg_noti_open2">提醒</string>
    <string name="wm_group_msg_noti_close2">屏蔽</string>
    <string name="wm_delete_msg">删除消息</string>
    <string name="wm_group_notify_open_brief">提醒</string>
    <string name="wm_group_notify_undis_brief">智能</string>
    <string name="wm_group_notify_close_brief">屏蔽</string>
    <string name="wm_sure_to_del_conversation">确定要删除该会话以及聊天记录吗?</string>
    <string name="wm_cancel">取消</string>
    <string name="wm_handling">处理中...</string>
    <string name="wm_group_msg_noti_undis2">智能</string>
    <string name="wm_press_talk">按住说话</string>
    <string name="wm_send">发送</string>
    <string name="wm_audio_too_short2">说话时间太短</string>
    <string name="wm_first_gchat_noti">群组聊天的内容仅成员可见</string>
    <string name="wm_click_add_friend">点此为添加联系人</string>
    <string name="wm_up_cancel_send">上滑手指，取消发送</string>
    <string name="wm_release_cancel_send">松开手指，取消发送</string>
    <string name="wm_download">下载</string>
    <string name="wm_expression_package_hint">表情包体积较大，建议在wifi环境下下载</string>
    <string name="wm_user_card">个人名片</string>
    <string name="wm_weimi_id">微米号</string>
    <string name="wm_me">我</string>
    <string name="wm_look_news">查看动态</string>
    <string name="wm_from">来自</string>
    <string name="wm_group_card">群组名片</string>
    <string name="wm_read_all">阅读全文</string>
    <string name="wm_whisper_look_period">24小时内可看</string>
    <string name="wm_whisper_receiving">密语接收中</string>
    <string name="wm_long_press_look_whisper">长按查看密语</string>
    <string name="wm_destroyed">密语已销毁</string>
    <string name="wm_send_failed">密语发送失败</string>
    <string name="wm_whisper_sending">密语发送中</string>
    <string name="wm_whisper_sended">密语已发送</string>
    <string name="wm_share_from">分享来自</string>
    <string name="wm_de_activity">的活动</string>
    <string name="wm_share">分享</string>
    <string name="wm_net_link">网页链接</string>
    <string name="wm_de_feed">的动态</string>
    <string name="wm_group_activity">群组活动</string>
    <string name="wm_whisper_voice_period">24小时内可听</string>
    <string name="wm_expired">密语已过期</string>
    <string name="wm_click_listen">点击收听密语</string>
    <string name="wm_voice_type_not_support">当前语音格式不支持，请确保客户端最新</string>
    <string name="wm_secret_msg">密语</string>
    <string name="wm_reply">回复</string>
    <string name="wm_comment2chat_prompt">评论%1$s的动态</string>
    <string name="wm_incompatible_msg">收到一条不兼容的消息，请检查客户端版本是否最新。</string>
    <string name="wm_operate_failed">操作失败</string>
    <string name="wm_sure_to_resend_msg">重新发送这条消息?</string>
    <string name="wm_file_not_exist">文件不存在或已被删除</string>
    <string name="wm_play_error">播放失败!</string>
    <string name="wm_no_sd_card">无SD卡</string>
    <string name="wm_pull_to_load_more">下拉加载更多...</string>
    <string name="wm_expression">表情</string>
    <string name="wm_message_photo">相册</string>
    <string name="wm_message_camera">拍摄</string>
    <string name="wm_open_camera_info">正在打开相机...</string>
    <string name="wm_choose_pictures">选择图片</string>
    <string name="wm_done">完成</string>
    <string name="wm_add_friend">添加</string>
    <string name="wm_picture_count_reach_limit">图片数量已经到达限制，请删除一些图片</string>
    <string name="wm_picture_folder_is_empty">没有图片</string>
    <string name="wm_album_database_is_error">无法读取手机图片数据库</string>
    <string name="wm_no_sd_card_please_insert_sd_card">储存卡已拔出，图片等功能暂时不可用</string>
    <string name="wm_send_msg_txt_exceed_hint_p1">文字最多</string>
    <string name="wm_send_msg_txt_exceed_hint_p2">,请重新编辑</string>
    <string name="wm_send_must_not_none">不能发送空白消息！！</string>
    <string name="wm_relax">松开结束</string>
    <string name="wm_no_image_select_info">未选择图片!</string>
    <string name="wm_file_load_fail">加载失败!</string>
    <string name="wm_sure_to_send_img">确定要发送该图片吗</string>
    <string name="wm_image_cant_read">图片无法读取</string>
    <string name="wm_sure_to_transponed">确定要转发该条消息吗?</string>
    <string name="wm_sdayofweek2">星期一</string>
    <string name="wm_sdayofweek3">星期二</string>
    <string name="wm_sdayofweek4">星期三</string>
    <string name="wm_sdayofweek5">星期四</string>
    <string name="wm_sdayofweek6">星期五</string>
    <string name="wm_sdayofweek7">星期六</string>
    <string name="wm_sdayofweek1">星期天</string>
    <string name="wm_network_interrupt">网络中断</string>
    <string name="wm_login_other_device">账号已经在其它设备登录，请重试</string>
    <string name="wm_auth_lapse">认证过期</string>
    <string name="wm_already_login">已登陆，勿重复登陆</string>
    <string name="wm_account_input_error">用户名或密码非法</string>
    <string name="wm_login_success">登录成功</string>
    <string name="wm_login_failed">登录失败</string>
    <string name="wm_save_photo">保存到手机相册</string>
    <string name="wm_save_local_success">已保存到手机</string>
    <string name="wm_save_local_error">保存到手机失败</string>
    <string name="pull_to_refresh_pull_label">加载更多…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="wm_login_ing">正在登陆...</string>
    <string name="wm_no_login">未登录</string>
    <string name="wm_logining_try_again">正在登录，请稍后尝试</string>
    <string name="wm_exit_success">退出成功</string>
    <string name="wm_exit_failed">退出失败 </string>
    <string name="wm_receive_a_new_msg">收到一条新消息</string>

</resources>